src/index.css
@import url('https://fonts.googleapis.com/css2?family=Coiny&family=Sora:wght@100;200;300;400;500;600;700;800&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  margin: 0;
  font-family: 'Sora', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  scrollbar-color: theme("colors.gray.400") transparent;
}

/* global scrollbars */
*::-webkit-scrollbar{
  border-radius: 100%;
}

*:hover::-webkit-scrollbar-thumb {
  background: theme("colors.gray.400");
  border-radius: 10px;
}

*::-webkit-scrollbar-thumb {
  background: transparent;
  border-radius: 10px;
}

*::-webkit-scrollbar-track {
  background: transparent;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

@layer base {
  body {
    @apply text-slate-800 bg-slate-100 dark:text-slate-200 dark:bg-slate-800;
  }
}

